--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ dependencies {
     testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
 
+    testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
+    testCompile('org.mockito:mockito-core:2.23.0')
+
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
